Edycja readme, dodanie komentarzy do application.properties